--- a/package.xml
+++ b/package.xml
@@ -33,5 +33,6 @@
 
   <export>
     <build_type>ament_cmake</build_type>
+    <ros1_bridge mapping_rules="vision_msgs_mapping_rules.yaml" />
   </export>
 </package>
